--- a/01_introduccion_a_django.ipynb
+++ b/01_introduccion_a_django.ipynb
@@ -31,7 +31,7 @@
     "* Utiliza plantillas (templates) para desplegar aplicaciones.\n",
     "* Soporta múltipes idiomas.\n",
     "* Diseñado para aprovechar el paradigma de desarrollo dirigido por pruebas (*TDD*).\n",
-    "* Se apega al patrón [*MVC*](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"Model View Template\".\n",
+    "* Se apega al patrón [*MVC*](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) mediante la implementación del concepto  \"*Model View Template*\".\n",
     "* Hace énfasis en la seguridad.\n",
     "* Es escalable.\n",
     "* Es muy versátil, ya que es una excelente plataforma para:\n",
@@ -77,12 +77,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Proyectos (projects) y aplicaciones (apps) de *Django*.\n",
+    "## Proyectos (*projects*) y aplicaciones (*apps*) de *Django*.\n",
     "\n",
     "Al desarrollar aplicaciones web en *Django* se entiende lo siguiente:\n",
     "\n",
-    "* Un proyecto se refiere a un producto completo que será desplegado por el framework. Por lo general un proyecto corresponde a un sitio web.\n",
-    "* Una aplicación es un componente autocontenido de un proyecto y por lo general corresponde a una URL dentro del sitio."
+    "* Un proyecto se refiere a un producto completo que será desplegado por el *framework*. Por lo general un proyecto corresponde a un sitio web.\n",
+    "* Una aplicación es un componente autocontenido de un proyecto y por lo general corresponde a una *URL* dentro del sitio."
    ]
   },
   {
@@ -120,7 +120,7 @@
     "* La siguiente celda despelgará la localización donde se encuentra ```django-admin```. \n",
     "\n",
     "\n",
-    "**Nota:** El comando ```which``` es propio de sistemas basados en GNU/Linux. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista®, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
+    "**Nota:** El comando ```which``` es propio de sistemas basados en *GNU/Linux*. En caso de que se ejecute el siguiente comando en un entorno distinto al de la VM proporcionada por Pythonista®, es posible que tenga que instalarlo. En otros sistemas no es posible ejecutar este comando."
    ]
   },
   {
@@ -187,8 +187,8 @@
    "source": [
     "* La siguiente celda realizará lo siguiente:\n",
     "\n",
-    "   * Creará el subdirectorio ```tutorial``` en el directorio en el que se encuentra actualmente esta notebook.\n",
-    "   * Desplegará la estructura mínima de archivos y de subdirectorios de un proyecto de Django."
+    "   * Creará el subdirectorio ```tutorial``` en el directorio en el que se encuentra actualmente esta *notebook*.\n",
+    "   * Desplegará la estructura mínima de archivos y de subdirectorios de un proyecto de *Django*."
    ]
   },
   {
@@ -206,9 +206,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### La estructura por defecto de un proyecto de Django.\n",
+    "### La estructura por defecto de un proyecto de *Django*.\n",
     "\n",
     "A continuación se mostrará la estructura creada dentro del subdirectorio [```tutorial```](tutorial)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree tutorial"
    ]
   },
   {
@@ -229,21 +238,21 @@
     "\n",
     "* Se puede apreciar que en el directorio ```tutorial``` se encuentran:\n",
     "    * El script ```manage.py```\n",
-    "    * Otro subdirectorio de nombre ```tutorial``` con la estructura de un paquete de Python."
+    "    * Otro subdirectorio de nombre ```tutorial``` con la estructura de un paquete de *Python*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El script ```manage.py```."
+    "## El *script* ```manage.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este script hace uso de forma indirecta de ```django-admin``` para la gestión de un proyecto en particular con cualquiera de la siguientes sintaxis.\n",
+    "Este *script* hace uso de forma indirecta de ```django-admin``` para la gestión de un proyecto en particular con cualquiera de la siguientes sintaxis.\n",
     "\n",
     "```\n",
     "./manage.py <subcomando> <parámetros>\n",
@@ -258,14 +267,14 @@
     "* ```<subcomando>``` corresponde a una instrucción específica.\n",
     "* ```<argumentos>``` corersponde a una secuencia de valores específicos.\n",
     "\n",
-    "**Nota:** Es necesario ejecutar el script ```manage.py``` desde el directorio en el que dicho script se encuentra. A partir de este momento se dará por hecho lo anterior."
+    "**Nota:** Es necesario ejecutar el *script* ```manage.py``` desde el directorio en el que dicho script se encuentra. A partir de este momento se dará por hecho lo anterior."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda moverá la ejecución de la notebook al directorio ```tutorial```."
+    "* La siguiente celda moverá la ejecución de la *notebook* al directorio ```tutorial```."
    ]
   },
   {
@@ -281,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará el contenido del script ```manage.py```."
+    "* La siguiente celda desplegará el contenido del *script* ```manage.py```."
    ]
   },
   {
@@ -304,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En vista de que el directorio de ejecución de esta notebook fue cambiado al subdirectorio ```tutorial```, se ejecutará el script ```manage.py``` de la forma siguiente:"
+    "* En vista de que el directorio de ejecución de esta *notebook* fue cambiado al subdirectorio ```tutorial```, se ejecutará el *script* ```manage.py``` de la forma siguiente:"
    ]
   },
   {
@@ -354,12 +363,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "!python manage.py startapp main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree"
    ]
   },
   {
@@ -406,14 +433,14 @@
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<máscara de transmisión>``` corresponde a una máscara IP, un dominio o un host que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
+    "* ```<máscara de transmisión>``` corresponde a una máscara *IP*, un dominio o un *host* que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
     "* ```<puerto>``` corresponde al número de puerto desde el cual será accesible el servidor de *Django*.\n",
     "\n",
     "**Notas:**\n",
     "\n",
     "* Si no se especifica el rango de transmisión, el servidor de *Django* sólo será accesible para ```localhost```.\n",
     "* Si no se especifica el puerto, el servidor de *Django* estará disponible en el puerto ```8000```.\n",
-    "* Para que el servidor de *Django* esté disponible para todas las direcciones IP, se definirá el rango de transmisión ```0.0.0.0```."
+    "* Para que el servidor de *Django* esté disponible para todas las direcciones *IP*, se definirá el rango de transmisión ```0.0.0.0```."
    ]
   },
   {
@@ -431,16 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "python manage.py runserver 0.0.0.0:8000"
+    "!python manage.py runserver 0.0.0.0:8000"
    ]
   },
   {
@@ -458,14 +476,14 @@
     "```\n",
     "#### Inicio del servidor.\n",
     "\n",
-    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Desde la terminal ubicar el *shell* en el directorio ```tutorial```, en el cual se encuentra el *script* ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
     "```\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+    "Es necesario que el *firewall* de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
@@ -533,13 +551,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
