--- a/02_internet_la_web_y_requests.ipynb
+++ b/02_internet_la_web_y_requests.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Internet, la World Wide Web y el paquete ```requests```.\n",
+    "# Internet, la *World Wide Web* y el paquete ```requests```.\n",
     "\n",
-    "Este capítulo trata sobre los concepto básicos sobre Internet y la \"World Wide Web\" desde un punto de vista técnico con la finalidad de poder tener los conocimientos necesarios para el desarrollo de aplicaciones y servicios web básica."
+    "Este capítulo trata sobre los concepto básicos sobre Internet y la \"*World Wide Web*\" desde un punto de vista técnico con la finalidad de poder tener los conocimientos necesarios para el desarrollo de aplicaciones y servicios web básica."
    ]
   },
   {
@@ -98,7 +98,7 @@
     "    * Para *HTTPS* se indica ```https```.\n",
     "* ```<usuario>``` es el nombre del usuario con el que se accederá al recurso en el caso de que el acceso requiera de autenticación.\n",
     "* ```<contraseña>```es la contraseña del usuario con el que se accederá al recurso en el caso de que el acceso requiera de autenticación.\n",
-    "* ```<anfitrión>``` indica la dirección en la que se encuentra el sistema anfitrión (host) al que se quiere acceder.\n",
+    "* ```<anfitrión>``` indica la dirección en la que se encuentra el sistema anfitrión (*host*) al que se quiere acceder.\n",
     "* ```<puerto>``` es el puerto en el que el servicio está habilitado.\n",
     "    * *HTTP* utiliza el puerto ```80``` por defecto.\n",
     "    * *HTTPS* utiliza el puerto ```443``` por defecto.\n",
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estructura de una consulta (query).\n",
+    "### Estructura de una consulta (*query*).\n",
     "\n",
     "Las consultas son una sucesión de parámetros ```<nombre>=<valor>``` separados por el caracter ```&``` de la siguiente forma:\n",
     "\n",
@@ -128,7 +128,7 @@
     "**Ejemplo:**\n",
     "\n",
     "* La siguiente *URL* realizará lo siguiente:\n",
-    "    * Realizará una conexión *HTTPS* en el puerto 443 con el sistema anfitrión localizado en ```www.google.com```.\n",
+    "    * Realizará una conexión *HTTPS* en el puerto ```443``` con el sistema anfitrión localizado en ```www.google.com````\n",
     "    * buscará al recurso localizado en la ruta ```search```.\n",
     "    * Enviará el parámetro ```q=pythonista```.\n",
     "\n",
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Acceso a un anfitrión (host).\n",
+    "## Acceso a un anfitrión (*host*).\n",
     "\n",
     "Los sistemas anfitriones son equipos o sistemas de cómputo los cuales están distribuídos por todo el mundo y cuyos servicios pueden ser accedidos de dos maneras:\n",
     "\n",
@@ -159,7 +159,7 @@
     "\n",
     "Una [dirección *IP*](https://es.wikipedia.org/wiki/Direcci%C3%B3n_IP) es un número único que identifica a un nodo de red de un servidor específico. Un servidor puede tener más de un nodo de red, por lo que cada nodo tendría una direccion *IP* diferente y única.\n",
     "\n",
-    "La \"Internet Asigned Numbres Authority\" ([*IANA*](https://www.iana.org/)) es la organización encargada de asignar y distribuir los segmentos de direcciones *IP* a las diversas organizaciones privadas y gubernamentales."
+    "La \"*Internet Asigned Numbres Authority*\" ([*IANA*](https://www.iana.org/)) es la organización encargada de asignar y distribuir los segmentos de direcciones *IP* a las diversas organizaciones privadas y gubernamentales."
    ]
   },
   {
@@ -168,7 +168,7 @@
    "source": [
     "#### Direcciones *IP* versión 4 (*IPv4*).\n",
     "\n",
-    "La especificación de los identificadores *IPv4* fue definida por la \"Internet Engineering Task Force\" ([*IETF*](https://ietf.org/about/)) en el [*RFC 6864*](https://tools.ietf.org/html/rfc6864).\n",
+    "La especificación de los identificadores *IPv4* fue definida por la \"*Internet Engineering Task Force*\" ([*IETF*](https://ietf.org/about/)) en el [*RFC 6864*](https://tools.ietf.org/html/rfc6864).\n",
     "\n",
     "Las direcciones *IPv4* son las de uso más común. Corresponden a un número de 32 bits expresado por 4 segmentos de números que van de ```0``` a ```255``` (8 bits) separados por un punto ```.```.\n",
     "\n",
@@ -299,7 +299,7 @@
     "\n",
     "**Ejemplo:**\n",
     "\n",
-    "En caso de estar viendo este contenido desde una notebook de Jupyter corriendo desde un equipo propio, es muy probable que el navegador apunte a ```localhost:8888```."
+    "En caso de estar viendo este contenido desde una *notebook* de *Jupyter* corriendo desde un equipo propio, es muy probable que el navegador apunte a ```localhost:8888```."
    ]
   },
   {
@@ -332,7 +332,7 @@
    "source": [
     "#### Características de *HTTP*.\n",
     "\n",
-    "*HTTP* está basado en  una arquitectura cliente-servidor en la que se intercambian peticiones (requests) por parte del cliente y respuestas (responses) por parte del servidor y tiene las siguientes caracterísiticas. \n",
+    "*HTTP* está basado en  una arquitectura cliente-servidor en la que se intercambian peticiones (*requests*) por parte del cliente y respuestas (*responses*) por parte del servidor y tiene las siguientes caracterísiticas. \n",
     "\n",
     "* **Sin estado.** Es decir, que cada una de las transacciones request/response que se realizan no afectan al estado del cliente o del servidor, además de que cada transacción es totalmente independiente de el resto.\n",
     "* **Independiente del contenido.** Aún cuando es muy común que un servidor *HTTP* entregue documentos en formato *HTML*, no existe restricción en el tipo de recurso al que se pueda acceder.\n",
@@ -369,8 +369,8 @@
     "\n",
     "Las comunicaciones entre el cliente y el servidor consisten en un serie de intercambios de mensajes.\n",
     "\n",
-    "* Los mensajes que envía un cliente a un servidor mediante una *URL* se conocen como \"peticiones\" (requests).\n",
-    "* Los mensajes que un servidor envía al cliente después de haber procesado la petición se conocen como \"respuestas\" (responses)."
+    "* Los mensajes que envía un cliente a un servidor mediante una *URL* se conocen como \"peticiones\" (*requests*).\n",
+    "* Los mensajes que un servidor envía al cliente después de haber procesado la petición se conocen como \"respuestas\" (*responses*)."
    ]
   },
   {
@@ -384,9 +384,9 @@
     "Tanto las peticiones como las respuestas tiene una estructura compuesta primordialmente por:\n",
     "\n",
     "* Una línea de inicio, con la descripción general del mensaje.\n",
-    "* Una serie de encabezados (headers), los cuales corresponden a ciertos campos que definen las caracterśiticas del mensaje y que se encuentran definidos en la [*RFC 4229*]( https://tools.ietf.org/html/rfc4229).\n",
+    "* Una serie de encabezados (*headers*), los cuales corresponden a ciertos campos que definen las caracterśiticas del mensaje y que se encuentran definidos en la [*RFC 4229*]( https://tools.ietf.org/html/rfc4229).\n",
     "* Una línea en blanco.\n",
-    "* El cuerpo (body) del mensaje, el cual contienen los datos del mensaje.\n",
+    "* El cuerpo (*body*) del mensaje, el cual contienen los datos del mensaje.\n",
     "\n",
     "Para conocer más con respecto a los mensajes *HTTP* es posible consultar el siguiente enlace:\n",
     "\n",
@@ -582,7 +582,7 @@
     "    * La clave ```'Last-Modified'```, el cual contiene la fecha de la última modificación del recurso.\n",
     "    * La clave ```'Content-Encoding'```, el cual contiene la codificación del contenido.\n",
     "    * La clave ```'Content-Length'```, el cual contiene el tamaño en bytes del contenido.\n",
-    "    * La clave ```'Content-Type'```, el cual describe el [tipo MIME](https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types#Tipos_MIME_importantes_para_desarrolladores_Web) del contenido.\n",
+    "    * La clave ```'Content-Type'```, el cual describe el [tipo *MIME*](https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types#Tipos_MIME_importantes_para_desarrolladores_Web) del contenido.\n",
     "\n",
     "* El atributo ```status_code```, el cual corresponde al número de código de estado que regresa el servidor.\n",
     "* El atributo ```reason```, el cual es un objeto de tipo```str``` con un mensaje relacionado al código de estado.\n",
@@ -1017,13 +1017,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1037,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
