--- a/03_configuracion_de_un_proyecto.ipynb
+++ b/03_configuracion_de_un_proyecto.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## El script ```settings.py```.\n",
     "\n",
-    "La configuración básica de un proyecto de *Django* se encuentra en un script de Python llamado ```settings.py```, el cual también puede ser importado como un módulo.\n",
+    "La configuración básica de un proyecto de *Django* se encuentra en un script de *Python* llamado ```settings.py```, el cual también puede ser importado como un módulo.\n",
     "\n",
     "La documentación de la configuración de *Django* puede ser consultada en https://docs.djangoproject.com/en/3.0/ref/settings\n",
     "\n",
@@ -41,7 +41,8 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El comando mágico de Jupyter ```%pycat``` permite ver el contenido de un script de de Python en una ventana del navegador.\n",
+    "* El \"comando mágico\" de *Jupyter* ```%pycat``` permite ver el contenido de un *script* de *Python* en una ventana del navegador.\n",
+    "\n",
     "* La siguiente celda desplegará el contenido del archivo ```tutorial/tutorial/settings.py```.\n"
    ]
   },
@@ -60,7 +61,7 @@
    "source": [
     "* El archivo define diversas variables, las cuales se encuentran escritas en mayúsculas.\n",
     "\n",
-    "* Cada variable definen ciertos parámentros de configuración del proyecto."
+    "* Cada variable definen ciertos parámetros de configuración del proyecto."
    ]
   },
   {
@@ -74,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se importará al archivo ```tutorial/tutorial/settings.py``` como un módulo."
+    "* A continuación se importará al *script* ```tutorial/tutorial/settings.py``` como un módulo."
    ]
   },
   {
@@ -186,9 +187,9 @@
     "\n",
     "Esta variable define las conexiones a bases de datos de la aplicación.\n",
     "\n",
-    "Para este proyecto se creó el archivo ```tutorial/db.sqlite3```, el cual corresponde a una base de datos de [SQLite](https://www.sqlite.org/index.html).\n",
+    "Para este proyecto se creó el archivo ```tutorial/db.sqlite3```, el cual corresponde a una base de datos de [*SQLite*](https://www.sqlite.org/index.html).\n",
     "\n",
-    "Para saber más sobre SQLite, es posible consultar el tutorial localizado en http://www.sqlitetutorial.net/."
+    "Para saber más sobre *SQLite*, es posible consultar el tutorial localizado en http://www.sqlitetutorial.net/."
    ]
   },
   {
@@ -228,7 +229,7 @@
     "\n",
     "Define aquellos componentes que se ejecutan cuando el servidor y el cliente interactúan independientemente de la aplicacion que se esté ejecutando.\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/middleware/#module-django.middleware"
+    "https://docs.djangoproject.com/en/3.2/ref/middleware/#module-django.middleware"
    ]
   },
   {
@@ -294,13 +295,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
