--- a/04_mvc_mvt_y_servicios_web.ipynb
+++ b/04_mvc_mvt_y_servicios_web.ipynb
@@ -70,13 +70,13 @@
    "metadata": {},
    "source": [
     "En el caso de *Django*, se utiliza la arquitectura *MVT*, en la que:\n",
-    "* Las *Plantillas* (*Templates*), se encargan de presentar una interfaz al usuario por medio de un documento dinámico.\n",
+    "* Las plantillas (*Templates*), se encargan de presentar una interfaz al usuario por medio de un documento dinámico.\n",
     "* El *Modelo* está ligado a un *ORM*.\n",
     "  * Cada modelo de *Django* es una subclase de la clase ```django.db.models.Model```.\n",
     "  * Un modelo está ligado generalmente a una tabla de una base de datos.\n",
     "  * Un registro de la tabla corresponde una instancia de un modelo.\n",
     "  * Los atributos de un objeto corresponden a un campo de un registro. \n",
-    "* Las *Vistas* hacen la vez del controlador y gestionan todas las reglas de negocio por medio de funciones."
+    "* Las vistas hacen la vez del controlador y gestionan todas las reglas de negocio por medio de funciones."
    ]
   },
   {
@@ -90,27 +90,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aplicación web (\"web app\").\n",
+    "### Aplicación web (\"*web app*\").\n",
     "\n",
-    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final mediante la la interfaz de un navegador web. Esta interfaz, también conocida como \"front-end\" es el medio de interacción entre el usuario y dicha aplicación."
+    "Una aplicación web por lo general está enfocada a realizar transacciones que son accesibles a un usuario final mediante la la interfaz de un navegador web. Esta interfaz, también conocida como \"*front-end*\" es el medio de interacción entre el usuario y dicha aplicación."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Servicios web (\"web services\").\n",
+    "### Servicios web (\"*web services*\").\n",
     "\n",
-    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en el intercambio de datos entre el cliente y el servidor mediante al acceso a \"endpoints\"."
+    "Un servicio web está enfocado a la realización de transacciones en la que el énfasis se hace en el intercambio de datos entre el cliente y el servidor mediante al acceso a \"*endpoints*\"."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Puntos de acceso (\"endpoints\").\n",
+    "### Puntos de acceso (\"*endpoints*\").\n",
     "\n",
-    "Un \"endpoint\"  es una *URL* que expone un servicio web, dicho servicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos."
+    "Un *endpoint* es una *URL* que expone un servicio web, dicho servicio puede ser consumido por un cliente (no necesariamente un navegador web) en caso de que cuente con la identidad y los permisos correctos."
    ]
   },
   {
@@ -128,9 +128,9 @@
    "source": [
     "### Aplicaciones web desde el front-end.\n",
     " \n",
-    "Debido a la rápida evolución de herramientas y frameworks basados primordialmente en *Javascript*, se ha podido aprovechar al navegador como una plataforma para desarollo de aplicaciones. A este tipo de aplicaciones se les conoce como \"front-end\".\n",
+    "Debido a la rápida evolución de herramientas y frameworks basados primordialmente en *Javascript*, se ha podido aprovechar al navegador como una plataforma para desarollo de aplicaciones. A este tipo de aplicaciones se les conoce como \"*front-end*\".\n",
     " \n",
-    "Las aplicaciones de front-end son capaces de consumir servicios web directamente desde el navegador enviando peticiones al servidor o \"back-end\" mediante el acceso a las *API*."
+    "Las aplicaciones de *front-end* son capaces de consumir servicios web directamente desde el navegador enviando peticiones al servidor o \"*back-end*\" mediante el acceso a las *API*."
    ]
   },
   {
@@ -140,7 +140,7 @@
     "## *RESTFul* o *REST*.\n",
     "\n",
     "\n",
-    "*REST* corresponde a las siglas en inglés de *Representación de Estado Transaccional* y fue propuesta por primera vez en la [tesis doctoral de Roy Fielding](https://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm) como una serie de reglas para aprovechar los métodos de HTTP con la finalidad de  crear servicios web ligeros y rápidos.\n",
+    "*REST* corresponde a las siglas en inglés de *Representación de Estado Transaccional* y fue propuesta por primera vez en la [tesis doctoral de Roy Fielding](https://www.ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm) como una serie de reglas para aprovechar los métodos de *HTTP* con la finalidad de  crear servicios web ligeros y rápidos.\n",
     "\n",
     "\n",
     "\n",
@@ -172,13 +172,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
