--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIA:** Es necesario haber creado previamente el proyecto definido en la notebook [```01_introduccion_a_django.ipynb```](01_introduccion_a_django.ipynb) localizado en el directorio [```tutorial```](tutorial)."
+    "**ADVERTENCIA:** Es necesario haber creado previamente el proyecto definido en la *notebook* [```01_introduccion_a_django.ipynb```](01_introduccion_a_django.ipynb) localizado en el directorio [```tutorial```](tutorial)."
    ]
   },
   {
@@ -39,13 +39,11 @@
     "Cuando un cliente envía una petición a una *URL* apuntando a un servidor de *Django* ocurre lo siguiente:\n",
     "\n",
     "* El servidor de *Django* creará un objeto de tipo ```request```, el cual contiene todos los datos de la petición del cliente.\n",
-    "* La ruta de la petición debe de coincidir con patrón de ruta definido en algún script ```urls.py```.\n",
+    "* La ruta de la petición debe de coincidir con patrón de ruta definido en un *script* ```urls.py``` localizado dentro del directorio del proyecto o en el de una aplicación.\n",
     "* Cada patrón de ruta está ligado a una función de vista, la cual será ejecutada cuando una petición coincida con el patrón de ruta correspondiente.\n",
     "* Las funciones de vista son definidas generalmente en los scripts ```views.py```, los cuales son importados como módulos por los scripts ```urls.py```.\n",
     "* *Django* ejecutará una función de vista ingresando al objeto ```request``` como primer argumento de dicha función.\n",
-    "* La función de vista deberá de regresar un objeto ```response```, el cual será utilizado por el servidor de *Django* para transmitir una respuesta al cliente.\n",
-    "\n",
-    "**Nota:** Los objetos ```request``` y ```response``` serán estudiados en capítulos posteriores."
+    "* La función de vista deberá de regresar un objeto ```response```, el cual será utilizado por el servidor de *Django* para transmitir una respuesta al cliente."
    ]
   },
   {
@@ -54,7 +52,7 @@
    "source": [
     "## Configuración del script ```urls.py``` raíz de un proyecto.\n",
     "\n",
-    "Un proyecto de *Django* debe de tener al menos un script ```urls.py``` a partir del cual es posible mapear todas las *URLs* de dicho poyecto y de sus aplicaciones. \n",
+    "Un proyecto de *Django* debe de tener al menos un *script* ```urls.py``` a partir del cual es posible mapear todas las *URLs* de dicho poyecto y de sus aplicaciones. \n",
     "\n",
     "La localización de este script es definida con la variable ```ROOT_URLCONF``` del script ```settings.py``` del proyecto."
    ]
@@ -102,8 +100,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continación se muestra el script ```tutorial/tutorial/urls.py```, el cual fue generado cuando se creó el proyecto ```tutorial```.\n",
-    "* Este script define al patrón de ruta ```'admin/'```, el cual es ligado a la función ```django.contrib.admin.site.urls```.\n",
+    "* A continación se muestra el *script* ```tutorial/tutorial/urls.py```, el cual fue generado cuando se creó el proyecto ```tutorial```.\n",
+    "* Este *script* define al patrón de ruta ```'admin/'```, el cual es ligado a la función ```django.contrib.admin.site.urls```.\n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -163,7 +161,7 @@
     "\n",
     "La siguiente liga apunta a la documentación de referencian del paquete.\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.1/ref/urls/"
+    "https://docs.djangoproject.com/en/3.2/ref/urls/"
    ]
   },
   {
@@ -191,9 +189,9 @@
    "source": [
     "### La función ```django.urls.include()```.\n",
     "\n",
-    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra ```include``` cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
+    "En los lenguajes de programación como en el caso de *C*, se utliza la palabra ```include``` cuando se desea importar algún módulo de forma similar a la palabra reservada de *Python* ```import```. \n",
     "\n",
-    "En este caso, la función ```django.urls.include()``` permite referenciar a un script de tipo  ```urls.py``` localizado en otro sitio del proyecto, permitiendo acceder al objeto ```urlpatterns``` de dicho script, extendiendo de ese modo los patrones de ruta.\n",
+    "En este caso, la función ```django.urls.include()``` permite referenciar a un *script* de tipo  ```urls.py``` localizado en otro sitio del proyecto, permitiendo acceder al objeto ```urlpatterns``` de dicho *script*, extendiendo de ese modo los patrones de ruta.\n",
     "\n",
     "``` python\n",
     "django.urls.include('<patrón>', include('<script url>')\n",
@@ -202,7 +200,7 @@
     "Donde:\n",
     "\n",
     "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
-    "* ```<script url>``` corresponde la localización de un un script ```urls.py``` en otro sitio del proyecto. "
+    "* ```<script url>``` corresponde la localización de un *script* ```urls.py``` en otro sitio del proyecto. "
    ]
   },
   {
@@ -223,9 +221,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```tutorial/tutorial/urls.py```.\n",
+    "### El *script* ```tutorial/tutorial/urls.py```.\n",
     "\n",
-    "El script ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
+    "El *script* ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -236,14 +234,14 @@
     "```\n",
     "\n",
     "* El primer elemento de ```urlpatterns``` relaciona al patron de ruta ```admin/``` con la función ```django.contrib.admin.site.urls()```.\n",
-    "* El segundo elemento de ```urlpatterns``` indica que los patrones de ruta a partir del patrón  ```main/``` serán definidos por el módulo ```main.urls```, el cual corresponde al script ```tutorial/main/urls.py``` ."
+    "* El segundo elemento de ```urlpatterns``` indica que los patrones de ruta a partir del patrón  ```main/``` serán definidos por el módulo ```main.urls```, el cual corresponde al *script* ```tutorial/main/urls.py``` ."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al script ```tutorial/tutorial/urls.py``` con el script ```src/tutorial_urls.py```."
+    "* La siguiente celda sustituirá al *script* ```tutorial/tutorial/urls.py``` con el *script* ```src/tutorial_urls.py```."
    ]
   },
   {
@@ -284,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará los cambios en el script ```tutorial\\tutorial\\urls.py```."
+    "* La siguiente celda desplegará los cambios en el *script* ```tutorial\\tutorial\\urls.py```."
    ]
   },
   {
@@ -300,12 +298,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```tutorial/main/urls.py```.\n",
+    "### El *script*  ```tutorial/main/urls.py```.\n",
     "\n",
-    "En vista de que ```tutorial/tutorial/urls.py``` cargará como módulo el contenido de \n",
-    "```tutorial/main/urls.py``` es necesario que el script de referencia exista.\n",
+    "En vista de que ```tutorial/tutorial/urls.py``` cargará como módulo el contenido de ```tutorial/main/urls.py``` es necesario que el *script* de referencia exista.\n",
     "\n",
-    "El script ```src/05/main_urls.py``` contiene el siguiente código:\n",
+    "El *script* ```src/05/main_urls.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.urls import path\n",
@@ -318,7 +315,7 @@
     "Este código indica lo siguiente: \n",
     "\n",
     "* Importar la función ```django.urls.path()```.\n",
-    "* Importar el módulo ```views``` localizado en el mismo directorio donde se encuentra el script ```tutorial/main/urls.py``` (denotado por el punto ```.```). \n",
+    "* Importar el módulo ```views``` localizado en el mismo directorio donde se encuentra el *script* ```tutorial/main/urls.py``` (denotado por el punto ```.```). \n",
     "* La lista ```urlpatterns``` definen dos patrones de rutas:\n",
     "   * La ruta de ```main/```, la cual se denota por una cadena de caracteres vacía ```''```, ligándola a la función ```views.index()```.\n",
     "   * La ruta de ```main/vista```, la cual se denota por una cadena de caracteres ```'vista'```, ligándola a la función ```views.vista()```."
@@ -328,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda copiará el script ```src/05/main_urls.py``` a ```tutorial/main/urls.py```."
+    "* La siguiente celda copiará el *script* ```src/05/main_urls.py``` a ```tutorial/main/urls.py```."
    ]
   },
   {
@@ -369,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará los cambios en el script ```tutorial\\main\\urls.py```."
+    "* La siguiente celda desplegará los cambios en el *script* ```tutorial\\main\\urls.py```."
    ]
   },
   {
@@ -385,11 +382,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```tutorial/main/views.py```.\n",
+    "### El *script* ```tutorial/main/views.py```.\n",
     "\n",
-    "El script ```tutorial/main/views.py``` es referido como un módulo en el script ```tutorial/main/urls.py```.\n",
+    "El *script* ```tutorial/main/views.py``` es referido como un módulo en el *script* ```tutorial/main/urls.py```.\n",
     "\n",
-    "Hasta el momento, este script no contiene ninguna función y su código se vería similar a lo siguiente:\n",
+    "Hasta el momento, este *script* no contiene ninguna función y su código se vería similar a lo siguiente:\n",
     "\n",
     "```\n",
     "from django.shortcuts import render\n",
@@ -402,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará el contenido del script ```tutorial/main/views.py```."
+    "* La siguiente celda desplegará el contenido del *script* ```tutorial/main/views.py```."
    ]
   },
   {
@@ -420,23 +417,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo ilustrativo sobre los scripts ```view.py```."
+    "## Ejemplo ilustrativo sobre los *scripts* ```view.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```tutorial/main/views.py```.\n",
+    "### El *script* ```tutorial/main/views.py```.\n",
     "\n",
-    "Este script contiene las funciones de vista habilitadas para la aplicación ```main``` del proyecto ```tutorial```."
+    "Este *script* contiene las funciones de vista habilitadas para la aplicación ```main``` del proyecto ```tutorial```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El script ```src/05/views.py``` contiene lo siguiente:\n",
+    "El *script* ```src/05/views.py``` contiene lo siguiente:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -460,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al script ```tutorial/main/views.py``` con el script ```src/05/views.py```."
+    "* La siguiente celda sustituirá al *script* ```tutorial/main/views.py``` con el *script* ```src/05/views.py```."
    ]
   },
   {
@@ -499,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará los cambios en el script ```tutorial/main/views.py```."
+    "* La siguiente celda desplegará los cambios en el *script* ```tutorial/main/views.py```."
    ]
   },
   {
@@ -521,7 +518,7 @@
     "\n",
     "La documentación de este paquete puede ser consultada en:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.1/ref/contrib/admin/\n",
+    "https://docs.djangoproject.com/en/3.2/ref/contrib/admin/\n",
     "\n",
     "**Notas:**\n",
     "* Aún cuando esta la aplicación de administración es habilitada automáticamente al momento en el que se crea un proyecto, puede ser un recurso opcional.\n",
@@ -582,14 +579,14 @@
     "```\n",
     "#### Inicio del servidor.\n",
     "\n",
-    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Desde la terminal ubicar el *shell* en el directorio ```tutorial```, en el cual se encuentra el *script* ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
     "```\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+    "Es necesario que el *firewall* de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
@@ -644,13 +641,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -664,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
