--- a/09_objetos_request_y_response.ipynb
+++ b/09_objetos_request_y_response.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
-    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+    "Para poder realizar exitosamente los ejercicios de esta *notebook* es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las *notebooks* previas."
    ]
   },
   {
@@ -49,40 +49,48 @@
     "\n",
     "La referencia de este paquete puede ser consultada en:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.1/ref/request-response/"
+    "https://docs.djangoproject.com/en/3.2/ref/request-response/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detalles sobre la clase ```django.http.HttpRequest```."
+    "## Métodos de ```django.http.HttpRequest```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos de ```django.http.HttpRequest```.\n",
-    "\n",
-    "#### Métodos informativos.\n",
+    "### Métodos informativos.\n",
     "\n",
     "* ```get_host()``` regresa la *URL* del servidor.\n",
     "* ```get_port()``` regresa el puerto de conexión al servidor.\n",
     "* ```get_full_path()``` regresa la URL incluyendo los argumentos.\n",
     "* ```get_full_path_info()``` es similar a ```get_full_path()```, pero utilizando el atributo ```path_info```.\n",
     "* ```build_absolute_uri()``` regresa la *URL* absoluta.\n",
-    "* ```is_secure()``` indica si la conexión es segura.\n",
+    "* ```is_secure()``` indica si la conexión es segura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de *XML*.\n",
     "\n",
-    "#### Métodos de XML.\n",
-    "\n",
-    "* ```is_ajax()``` indica si el contenido es AJAX.\n",
+    "* ```is_ajax()``` indica si el contenido es *AJAX*.\n",
     "* ```read()``` lee todo el contenido de forma similar al método ```read()``` de ```open()```.\n",
     "* ```readline()``` lee una línea del contenido de forma similar al método ```readline()``` de ```open()```.\n",
     "* ```readlines()``` lee cada línea del contenido y regresaun un objeto tipo ```list``` de forma similar al método ```readlines()``` de ```open()```.\n",
-    "* ```__iter__()``` regresa un iterador.\n",
-    "\n",
-    "#### Métodos de *cookies*.\n",
+    "* ```__iter__()``` regresa un iterador."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Métodos de *cookies*.\n",
     "\n",
     "* ```get_signed_cookie()``` recibe una *cookie* firmada."
    ]
@@ -105,8 +113,8 @@
     "\n",
     "Donde: \n",
     "\n",
-    "* ```<consulta>``` es un objeto de tipo ```str``` que contiene una consulta con parámaetros como si se ingresarane  un una *URL*.\n",
-    "* ```<booleano>``` es un objeto de tipo ```bool```. El valor por defecto es ```False``` e indica que el objeto instnaciado es inmutable.\n",
+    "* ```<consulta>``` es un objeto de tipo ```str``` que contiene una consulta con parámetros como si se ingresarane  un una *URL*.\n",
+    "* ```<booleano>``` es un objeto de tipo ```bool```. El valor por defecto es ```False``` e indica que el objeto instanciado es inmutable.\n",
     "* ```<codificación>``` es una cadena de caracteres que indica la codificación del texto."
    ]
   },
@@ -124,19 +132,29 @@
     "* ```setdefault()```.\n",
     "* ```update()```.\n",
     "* ```items()```.\n",
-    "* ```values()```.\n",
-    "\n",
+    "* ```values()```.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Métodos de gestión.\n",
     "\n",
     "* ```get()``` obtiene un atributo del objeto  ```django.http.QueryDict```.\n",
     "* ```dict()``` convierte el contenido del objeto ```django.http.QueryDict``` en un objeto tipo ```dict```.\n",
     "* ```copy()``` crea una copia del objeto ```django.http.QueryDict```.\n",
-    "* ```urlencode()``` regresa un objeto ```str``` cuyo contenido usa la sintaxis de una consulta en una *URL* para desplegar las listas del objeto```django.http.QueryDict``` .\n",
-    "\n",
+    "* ```urlencode()``` regresa un objeto ```str``` cuyo contenido usa la sintaxis de una consulta en una *URL* para desplegar las listas del objeto```django.http.QueryDict``` ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Métodos de listas.\n",
     "\n",
     "* ```getlist()``` regresa la lista de objetos ligados a una clave.\n",
-    "* ```setlist()``` èn caso de que el objeto ```django.http.QueryDict``` sea nutabklwe, es posible modificar o crear una lista con clavle.\n",
+    "* ```setlist()``` èn caso de que el objeto ```django.http.QueryDict``` sea mutable, es posible modificar o crear una lista con clave.\n",
     "* ```appendlist()```.\n",
     "* ```setlistdefault()```.\n",
     "* ```lists()``` regresa las claves y sus listas correspondientes contenida en un objeto ```django.http.QueryDict```."
@@ -501,7 +519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
