--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo apt-get install libmariadb-dev -y"
+    "!sudo apt-get install libmariadb-dev default-libmysqlclient-dev libssl-dev -y"
    ]
   },
   {
@@ -491,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -505,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
