--- a/15_endpoints_de_la_api_rest.ipynb
+++ b/15_endpoints_de_la_api_rest.ipynb
@@ -45,7 +45,7 @@
     "Dependiendo del método mediante el cual se accede a dicha *URL*, se pueden realizar las siguientes operaciones.\n",
     "\n",
     "* Al acceder a la *URL* mediante el método ```GET```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```numero_de_cuenta``` corresponda al número de la *URL*. En caso de no existir, regresará un estado ```404```.\n",
-    "* Al acceder a la *URL* mediante el método ```POST```, el sevidor intentará crear una instancia de la clase ```api.models.Alumno``` cuyo tributo ```numero_de_cuenta```corresponderá al número de la *URL*. El servidor verificará que los datos enviados tengan la estructura y contenido adecuado. En caso de ser así, regresará un documento *JSON* con el estado del objeto creado. En caso de que ya exista un objeto cuyo atributo clave sea igual al de la *URL* o no tenga los datos o no tenga la estructura adecuada, el servidor regresará un error ```400```.\n",
+    "* Al acceder a la *URL* mediante el método ```POST```, el sevidor intentará crear una instancia de la clase ```api.models.Alumno``` cuyo atributo ```numero_de_cuenta```corresponderá al número de la *URL*. El servidor verificará que los datos enviados tengan la estructura y contenido adecuado. En caso de ser así, regresará un documento *JSON* con el estado del objeto creado. En caso de que ya exista un objeto cuyo atributo clave sea igual al de la *URL* o no tenga los datos o no tenga la estructura adecuada, el servidor regresará un error ```400```.\n",
     "* Al acceder a la *URL* mediante el método ```DELETE```, el sevidor regresará un documento *JSON* con el estado del objeto instanciado de ```api.models.Alumno``` cuyo atributo ```numero_de_cuenta``` corresponda al número de la *URL* y lo eliminará de la base de datos. En caso de no exisitir, regresará un estado ```404```.\n"
    ]
   },
@@ -187,7 +187,7 @@
     "        return False\n",
     "    elif campo == \"semestre\" and valor < 1:\n",
     "        return False\n",
-    "    elif campo == \"promedio\" and (valor < 0 or valor > 10):\n",
+    "    elif campo == \"promedio\" and (valor >= 0 or valor <= 10):\n",
     "        return False\n",
     "    elif (campo in (\"nombre\", \"primer_apellido\") and (valor == \"\")):\n",
     "        return False\n",
@@ -393,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -407,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
