--- a/16_cliente_api_rest.ipynb
+++ b/16_cliente_api_rest.ipynb
@@ -20,6 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests"
    ]
   },
@@ -56,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.get(\"http://localhost:8000/api/1223\")"
+    "respuesta = requests.get(\"http://localhost:8000/api/1221\")"
    ]
   },
   {
@@ -83,8 +92,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos ={'nombre':'Juan', 'primer_apellido': 'Escutia', 'segundo_apellido':'Aventado', \n",
-    "        'carrera':'Arquitectura', 'semestre':1, 'promedio':10, 'al_corriente':True,}"
+    "datos ={'nombre':'Juan', \n",
+    "        'primer_apellido': 'Escutia', \n",
+    "        'segundo_apellido':'Aventado', \n",
+    "        'carrera':'Arquitectura',\n",
+    "        'semestre':1,\n",
+    "        'promedio':8.7,\n",
+    "        'al_corriente':True,}"
    ]
   },
   {
@@ -93,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.post(\"http://localhost:8000/api/1229\", data=datos)"
+    "respuesta = requests.post(\"http://localhost:8000/api/1228\", data=datos)"
    ]
   },
   {
@@ -120,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta = requests.delete(\"http://localhost:8000/api/1224\")"
+    "respuesta = requests.delete(\"http://localhost:8000/api/1229\")"
    ]
   },
   {
@@ -152,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
