--- a/06_peticiones_y_respuestas.ipynb
+++ b/06_peticiones_y_respuestas.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
-    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+    "Para poder realizar exitosamente los ejercicios de esta *notebook*, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las *notebooks* previas."
    ]
   },
   {
@@ -31,9 +31,7 @@
     "\n",
     "Si un cliente cuenta con las credenciales y los permisos adecuados, éste puede iniciar una conexion con un servidor. \n",
     "\n",
-    "Una conexión consiste en intercambio de peticiones (requests) y respuestas (responses) entre un cliente y un servidor.\n",
-    "\n",
-    "**Nota:** En capítulos subsecuentes se estudiarán temas relacionados a la creación de sesiones seguras y a la autenticación de usuarios."
+    "Una conexión consiste en intercambio de peticiones (*requests*) y respuestas (*responses*) entre un cliente y un servidor."
    ]
   },
   {
@@ -51,7 +49,7 @@
     "\n",
     "La referencia a estas clases puede ser consultada desde la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.1/ref/request-response/"
+    "https://docs.djangoproject.com/en/3.2/ref/request-response/"
    ]
   },
   {
@@ -142,7 +140,7 @@
    "source": [
     "## Ejemplo ilustrativo.\n",
     "\n",
-    "El script ```src/06/views.py```  contiene el siguiente código:\n",
+    "El *script* ```src/06/views.py```  contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -167,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Las siguientes celda sustituirá al script ```tutorial/main/views.py``` con el script ```src/06/views.py```."
+    "* Las siguientes celda sustituirá al *script* ```tutorial/main/views.py``` con el *script* ```src/06/views.py```."
    ]
   },
   {
@@ -206,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará las modificaciones al scirpt ```tutorial/main/views.py```."
+    "* La siguiente celda desplegará las modificaciones al *script* ```tutorial/main/views.py```."
    ]
   },
   {
@@ -229,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### arranque desde la *notebook*."
+    "### Arranque desde la *notebook*."
    ]
   },
   {
@@ -272,14 +270,14 @@
     "```\n",
     "#### Inicio del servidor.\n",
     "\n",
-    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Desde la terminal ubicar el *shell* en el directorio ```tutorial```, en el cual se encuentra el *script* ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
     "```\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+    "Es necesario que el *firewall* de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
@@ -311,13 +309,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
