--- a/07_patrones_de_urls.ipynb
+++ b/07_patrones_de_urls.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
-    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+    "Para poder realizar exitosamente los ejercicios de esta *notebook*, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las *notebooks* previas."
    ]
   },
   {
@@ -29,9 +29,9 @@
    "source": [
     "El módulo ```django.urls``` cuenta con herramientas que permiten identificar y filtrar *URLs*  de modo tal que pueda crear servicios dinámicos a partir de la información contenida en ellos.\n",
     "\n",
-    "La documentacióm correspondiente puede ser consultada en la siguiente liga:\n",
+    "La documentación correspondiente puede ser consultada en la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.1/topics/http/urls/"
+    "https://docs.djangoproject.com/en/3.2/topics/http/urls/"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "**Ejemplo:**\n",
     " * Para capturar los segmentos de la *URL* ```main/53/azul/01``` se usaría el siguiente patrón:\n",
     " \n",
-    " ``` python\n",
+    " ```\n",
     " 'main/<int:codigo>/<string:color>/<int:cantidad>'\n",
     "```\n",
     "* Se obtendrían:\n",
@@ -168,9 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```src/07/urls.py```.\n",
+    "### El *script* ```src/07/urls.py```.\n",
     "\n",
-    "El script ```src/07/urls.py``` contiene lo siguiente:\n",
+    "El *script* ```src/07/urls.py``` contiene lo siguiente:\n",
     "\n",
     "\n",
     "``` python\n",
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al script ```tutorial/main/urls.py```  con el script ```src/07/urls.py```."
+    "* A continuación se sustituirá al *script* ```tutorial/main/urls.py```  con el *script* ```src/07/urls.py```."
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará las modificaciones al script ```tutorial/main/urls.py```."
+    "* La siguiente celda desplegará las modificaciones al *script* ```tutorial/main/urls.py```."
    ]
   },
   {
@@ -248,9 +248,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El script ```src/07/views.py```.\n",
+    "### El *script* ```src/07/views.py```.\n",
     "\n",
-    "El script ```src/07/views.py``` contiene el siguiente código:\n",
+    "El *script* ```src/07/views.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al script ```tutorial/main/views.py```  con el script ```src/07/views.py```."
+    "* A continuación se sustituirá al *script* ```tutorial/main/views.py```  con el *script* ```src/07/views.py```."
    ]
   },
   {
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará las modificaciones al script ```tutorial/main/views.py```."
+    "* La siguiente celda desplegará las modificaciones al *script* ```tutorial/main/views.py```."
    ]
   },
   {
@@ -379,14 +379,14 @@
     "```\n",
     "#### Inicio del servidor.\n",
     "\n",
-    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Desde la terminal ubicar el *shell* en el directorio ```tutorial```, en el cual se encuentra el *script* ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
     "```\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+    "Es necesario que el *firewall* de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
@@ -437,13 +437,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
