--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
-    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+    "Para poder realizar exitosamente los ejercicios de esta *notebook*, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las *notebooks* previas."
    ]
   },
   {
@@ -30,7 +30,7 @@
    "source": [
     "## El formato *JSON*.\n",
     "\n",
-    "*JSON* es el acrónimo de Javascript Object Notation y antes de las modificaciones publicadas en el estándar [*ECMAScript 2015*](https://www.ecma-international.org/ecma-262/6.0/), correspondía al modo en el que se definen objetos en Javascript. Sin embargo, la notación es tan simple y práctica que ha sido adoptada como un formato para la transmisión de datos y ha evolucionado de forma paralela a Javascript.\n",
+    "*JSON* es el acrónimo de *Javascript Object Notation* y antes de las modificaciones publicadas en el estándar [*ECMAScript 2015*](https://www.ecma-international.org/ecma-262/6.0/), correspondía al modo en el que se definen objetos en *Javascript*. Sin embargo, la notación es tan simple y práctica que ha sido adoptada como un formato para la transmisión de datos y ha evolucionado de forma paralela a *Javascript*.\n",
     "\n",
     "Para aprender más acerca de *JSON* es posible consultar la siguiente liga:\n",
     "\n",
@@ -61,7 +61,7 @@
    "source": [
     "### Las funciones ```json.dumps()``` y ```json.loads()```.\n",
     "\n",
-    "Estas dos funciones permiten tranformar cadenas de caracteres que contengan una estructura de datos apegadas a *JSON* y objetos de Python (primordialmente objetos tipo ```dict```)."
+    "Estas dos funciones permiten tranformar cadenas de caracteres que contengan una estructura de datos apegadas a *JSON* y objetos de *Python* (primordialmente objetos tipo ```dict```)."
    ]
   },
   {
@@ -415,7 +415,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo ```src/08/urls.py``` incluye una ruta apuntando a ```main/path```, ligándola a la función de vista ```views.respuesta_json()```.\n",
+    "El *script* ```src/08/urls.py``` incluye una ruta apuntando a ```main/path```, ligándola a la función de vista ```views.respuesta_json()```.\n",
     "\n",
     "``` python\n",
     "from django.urls import path, re_path \n",
@@ -434,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al archivo ```tutorial/main/urls.py``` con el archivo ```src/08/urls.py```."
+    "* A continuación se sustituirá al *script* ```tutorial/main/urls.py``` con el *script* ```src/08/urls.py```."
    ]
   },
   {
@@ -482,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo ```src/08/views.py``` incluye a la función de vista ```respuesta_json()``` con el siguiente código:\n",
+    "El *script* ```src/08/views.py``` incluye a la función de vista ```respuesta_json()``` con el siguiente código:\n",
     "\n",
     "``` python\n",
     "def respuesta_json(request):    \n",
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/08/views.py```."
+    "* A continuación se sustituirá al *script* ```tutorial/main/views.py``` con el *script* ```src/08/views.py```."
    ]
   },
   {
@@ -596,14 +596,14 @@
     "```\n",
     "#### Inicio del servidor.\n",
     "\n",
-    "* Desde la terminal ubicar el shell en el directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Desde la terminal ubicar el *shell* en el directorio ```tutorial```, en el cual se encuentra el *script* ```manage.py```.\n",
     "\n",
     "```\n",
     "python manage.py runserver 0.0.0.0:8000\n",
     "```\n",
     "\n",
     "**Nota:** \n",
-    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
+    "Es necesario que el *firewall* de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
@@ -627,13 +627,13 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -647,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
