--- a/13_modelos_de_django.ipynb
+++ b/13_modelos_de_django.ipynb
@@ -200,7 +200,7 @@
     "    nombre = models.CharField(max_length=50)\n",
     "    primer_apellido = models.CharField(max_length=50)\n",
     "    segundo_apellido = models.CharField(max_length=50)\n",
-    "    carrera = models.CharField(max_length=20)\n",
+    "    carrera = models.CharField(max_length=25)\n",
     "    promedio = models.FloatField()\n",
     "    al_corriente = models.BoolField()\n",
     "```"
@@ -462,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -476,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
