--- a/17_plantillas_de_django.ipynb
+++ b/17_plantillas_de_django.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plantillas (templates).\n",
+    "## Plantillas (*templates*).\n",
     "\n",
     "*Django* es un framework diseñado primordialmente para desplegar páginas web de forma dinámica mediante el patrón *MVT*, el cual además de los modelos y las funciones de vista, aprovecha el uso de plantillas para lograr tal  finalidad.\n",
     "\n",
@@ -47,7 +47,7 @@
     "    <body>\n",
     "        {% block cuerpo %}\n",
     "        <h1>¡Hola, mundo!</h1>\n",
-    "        {% endblock %)\n",
+    "        {% endblock %}\n",
     "    </body>\n",
     "</html>\n",
     "```\n",
@@ -64,7 +64,7 @@
     "\n",
     "El lenguaje de plantillas de *Django* (*DTL* por sus siglas en inglés) permiten modificar a un  documento que contiene código basado en dicho lenguaje, ejecutándolo junto con datos externos que son asignados como si fueran variables globales.\n",
     "\n",
-    "El *DTL* reconoce los tipos básicos de Python.\n",
+    "El *DTL* reconoce los tipos básicos de *Python*.\n",
     "\n",
     "### Tipos de etiquetas.\n",
     "\n",
@@ -99,7 +99,7 @@
     "A partir de estas etiquetas, es posible generar código que creará contenidos a utilizando el texto del documento original.\n",
     "\n",
     "**Nota:**\n",
-    "En este capítulo se explorarán sólo las etiquetas más representativas, pero La referencia a las etiqueta de *DTL* pueden ser consultadas en https://docs.djangoproject.com/en/3.1/ref/templates/builtins/."
+    "En este capítulo se explorarán sólo las etiquetas más representativas, pero La referencia a las etiqueta de *DTL* pueden ser consultadas en https://docs.djangoproject.com/en/3.2/ref/templates/builtins/."
    ]
   },
   {
@@ -148,6 +148,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### El método ```Template.render```.\n",
+    "\n",
+    "Este método permite sustituir los elementos dentro de una plantilla con los objetos ingresados en el contexto.\n",
+    "\n",
+    "```\n",
+    "<plantilla>.render(context=<contexto>)\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```plantilla```es una instancia de ```django.template.Template.\n",
+    "* ```contexto```es una instancia de ```django.template.Context."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Ejemplo:**\n",
     "\n",
     "En un shell de Django ejecutar lo siguiente:\n",
@@ -165,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuración de las plantillas.\n",
+    "## Configuración de las plantillas en un proyecto.\n",
     "\n",
     "El archivo ```tutorial/tutorial/settings.py``` contiene una sección que define la configuración de las plantillas de forma similar a lo siguiente:\n",
     "\n",
@@ -482,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La función ```django.shortcuts.render``` permite que una función de vista envíe a un cliewnte un documento creado a partir de una plantilla y un contexto específico:\n",
+    "La función ```django.shortcuts.render``` permite que una función de vista envíe a un cliente un documento creado a partir de una plantilla y un contexto específico:\n",
     "\n",
     "``` python\n",
     "render(request, <plantilla>, context=<contexto>)\n",
@@ -628,7 +646,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -642,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
