--- a/18_lenguaje_de_plantillas_de_django.ipynb
+++ b/18_lenguaje_de_plantillas_de_django.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "Las plantillas que incluyen código basado en el *DTL* puede realizar las siguientes operaciones.\n",
     "\n",
-    "* Acceder a los objetos ingresados en un contexto de forma similar a como Python accede al espacio de nombres del ámbito global.\n",
+    "* Acceder a los objetos ingresados en un contexto de forma similar a como *Python* accede al espacio de nombres del ámbito global.\n",
     "* Ejecutar expresiones utilizando filtros.\n",
     "* Delimitar bloques.\n",
     "* Ejecutar declaraciones condicionales.\n",
@@ -80,7 +80,7 @@
     "```\n",
     "\n",
     "Donde: \n",
-    "* ```<elemento>``` es un objeto de python que puede ser procesado\n",
+    "* ```<elemento>``` es un objeto de *Python* que puede ser procesado por el *DTL*.\n",
     "\n",
     "* Las expresiones permiten \"concatentar\" filtros, por lo que la salida del filtro de la izquierda es la entrada del filtro de la derecha.\n",
     "* Los filtros pueden incluir argumentos.\n",
@@ -763,7 +763,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -777,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
