--- a/20_gestion_de_formularios.ipynb
+++ b/20_gestion_de_formularios.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "Para mayor referencia sobre esta clase  se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/forms/api/#django.forms.Form"
+    "https://docs.djangoproject.com/en/3.2/ref/forms/api/#django.forms.Form"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "\n",
     "Para mayor referencia sobre esta clase se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/topics/forms/modelforms/#django.forms.ModelForm"
+    "https://docs.djangoproject.com/en/3.2/topics/forms/modelforms/#django.forms.ModelForm"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\n",
     "Para mayor referencia sobre esta clase se puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/forms/fields/#built-in-field-classes\n",
+    "https://docs.djangoproject.com/en/3.2/ref/forms/fields/#built-in-field-classes\n",
     "\n",
     "Cada uno de los campos tiene un \"widget\" definido por defecto. "
    ]
@@ -176,7 +176,7 @@
     "\n",
     "La clase base de los widgets es ```django.forms.Widget```. A partir de esta clase se han desarrollado diversos tipos de widgets.\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/forms/widgets/#widget\n",
+    "https://docs.djangoproject.com/en/3.2/ref/forms/widgets/#widget\n",
     "\n",
     "\n",
     "## Tipos de widgets.\n",
@@ -195,13 +195,13 @@
     "\n",
     "En la siguiente liga está disponible una relación de widgets de *Django.*\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/forms/widgets/#built-in-widgets\n",
+    "https://docs.djangoproject.com/en/3.2/ref/forms/widgets/#built-in-widgets\n",
     "\n",
     "\n",
     "Para mayor referencia puede consultar la siguiente liga:\n",
     "\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/forms/widgets/"
+    "https://docs.djangoproject.com/en/3.2/ref/forms/widgets/"
    ]
   },
   {
@@ -223,12 +223,12 @@
     "\n",
     "Para conocer el listado de validadores disponibles puede consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/validators/#built-in-validators\n",
+    "https://docs.djangoproject.com/en/3.2/ref/validators/#built-in-validators\n",
     "\n",
     "\n",
     "Para mayor referencia peude consultar la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/validators/"
+    "https://docs.djangoproject.com/en/3.2/ref/validators/"
    ]
   },
   {
@@ -274,7 +274,7 @@
     "Cuando se incluye ```{% csrf_token %}``` en un formulario, se crea un elemento ```<input>``` que es invisible al usuario, el cual tiene como nombre de atributo ```csrfmiddlewaretoken ```.\n",
     "\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/csrf/"
+    "https://docs.djangoproject.com/en/3.2/ref/csrf/"
    ]
   },
   {
@@ -301,21 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La función ```django.shortcuts.render()```.\n",
-    "\n",
-    "Anteriormente se utilizó la función ```django.shortcuts.render_to_response()``` para enviar páginas creadas a partir de una plantilla. Sin embargo, para poder desplegar una plantilla con una forma se utiliza ```django.shortcuts.render()```.\n",
-    "\n",
-    "\n",
-    "```\n",
-    "render(request, '<plantilla>', <contexto>)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creación de una forma que consume una API REST para realizar altas."
+    "## Creación de un formulario que consume una *API REST* para realizar altas."
    ]
   },
   {
@@ -657,7 +643,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -671,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
