--- a/21_seguridad_y_autenticacion_basicas.ipynb
+++ b/21_seguridad_y_autenticacion_basicas.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "La documentación correspondiente puede ser consultada en la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/topics/auth/\n",
+    "https://docs.djangoproject.com/en/3.2/topics/auth/\n",
     "\n",
     "**Nota:** Los alcances de este curso sólo cubren los temas de gestión básica de usuarios y autenticación simple."
    ]
@@ -45,7 +45,7 @@
    "source": [
     "Las aplicaciones instaladas para la gestión de usuarios y permisos son:\n",
     "* ```django.contrib.auth``` para la gestión de usuarios y grupos.\n",
-    "* ```django.contrib.contenttypes``` para asignar permisoso a los modelos que cree el desarrollador."
+    "* ```django.contrib.contenttypes``` para asignar permisos a los modelos que cree el desarrollador."
    ]
   },
   {
@@ -212,6 +212,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql sqlite:///tutorial/db.sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "%%sql sqlite:///tutorial/db.sqlite3\n",
+    "SELECT name FROM sqlite_master WHERE type = \"table\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%sql SELECT * FROM auth_user"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -238,7 +277,7 @@
     "\n",
     "Con excepción de ```'login/'``` cada función de vista relacionada con cada patrón cuenta con una plantilla predefinida. Sin embargo, es posible crear plantillas a la medida.\n",
     "\n",
-    "Pro defecto las *URLs* de este módulo buscarán las plantillas correspondientes en el directorio```registration/``` el cual se encuentra a su vez en el directorio definido para las plantillas del proyecto."
+    "Pro defecto las *URLs* de este módulo buscarán las plantillas correspondientes en el directorio```templates/registration/``` el cual se encuentra a su vez en el directorio definido para las plantillas del proyecto."
    ]
   },
   {
@@ -249,7 +288,7 @@
     "\n",
     "En el caso de la *URL* ligada a la regla ```'login/'```, es necesario crear una plantilla en la ruta ```registration/login.html```, la cual permita enviar  el usuario y la contraseña.\n",
     "\n",
-    "Un ejemplo de esta plantilla puede ser consultado en https://docs.djangoproject.com/en/2.2/topics/auth/default/#all-authentication-views."
+    "Un ejemplo de esta plantilla puede ser consultado en https://docs.djangoproject.com/en/3.2/topics/auth/default/#all-authentication-views."
    ]
   },
   {
@@ -587,13 +626,13 @@
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" \n",
     "                                 href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2020.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2021.</p>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -607,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
