--- a/23_panel_de_administracion.ipynb
+++ b/23_panel_de_administracion.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Este paquete contiene la biblioteca que gestiona la administración de modelos.\n",
     "\n",
-    "https://docs.djangoproject.com/en/3.0/ref/contrib/admin"
+    "https://docs.djangoproject.com/en/3.2/ref/contrib/admin"
    ]
   },
   {
@@ -34,6 +34,17 @@
     "## Los scripts ```admin.py```.\n",
     "\n",
     "Cada aplicación de *Django* cuenta con un script llamado ```admin.py```, el cual permite definis los modelos que pueden ser gestionados desde el panel de administración."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "!tree tutorial"
    ]
   },
   {
@@ -210,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
