--- a/24_despliegue_en_un_servidor_lamp.ipynb
+++ b/24_despliegue_en_un_servidor_lamp.ipynb
@@ -290,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "!sudo apt install libapache2-mod-wsgi-py3"
+    "!sudo apt install libapache2-mod-wsgi-py3 -y"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/24/settings.py /opt/django/tutorial/tutorial/"
+    "!sudo cp src/24/settings.py /opt/django/tutorial/tutorial/"
    ]
   },
   {
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Migraciones."
+    "###### Migraciones."
    ]
   },
   {
@@ -602,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -616,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
